# DLQ

./: .gitignore  Error-Driven_Dynamic_Quantization_Format.md  Introduction.md  LICENSE  Programming_Model(1).md  README.md  excel_logger.py  idea.md  infer_conv1_bn1_relu.cpp  main.cu  utils.hpp
BRECQ/data/: imagenet.py
BRECQ/models/: resnet.py
CUDA/resnet18-kernel-lab/: .gitignore  snippet.py
CUDA/resnet18-kernel-lab/cpp/: CMakeLists.txt
CUDA/resnet18-kernel-lab/cpp/fp32/: CMakeLists.txt
CUDA/resnet18-kernel-lab/cpp/fp32/kernels/: add_bias.cu  basic_block.cu  bn_inference.cu  im2col.cu  maxpool2d.cu  sgemm_tiled.cu  transpose.cu
CUDA/resnet18-kernel-lab/cpp/fp32/runtime/: fc_api.cu  infer_conv1_bn1_relu.cu  infer_e2e.cu  infer_layer1.cu  infer_layer2.cu  libfc.cu  utils.hpp
CUDA/resnet18-kernel-lab/scripts/: build_fp32.sh  run_step3.sh  run_step9.sh
CUDA/resnet18-kernel-lab/tools/: bench_fp32_vs_torch.py  bench_fp32_vs_torch_fast_nio.py  comapre_conv1.py  compare_stem.py  make_step2_fixture.py  make_step3_check_conv1.py  make_step3_check_conv1_from_export.py
CUDA_cpp_Programming/: NVIDIA GPU Architecture and Execution Pipline(Volta, Ampere, Hopper).md
CUDA_cpp_Programming/CUDA_Basics/Guide/: 1_Introduction.md  2_Programming_Model(1).md
CUDA_cpp_Programming/CUDA_Basics/Mine/: Tiling.md  im2col.md
CUDA_cpp_Programming/GPU-inside/: WhatIsGPU.md
CUDA_cpp_Programming/GPU-inside/TeslaV100/: GV100_1_ExtremePerformanceAndHighEfficiency.md  GV100_2_VoltaStreamingMultiprocessor.md
CUDA_cpp_Programming/Guide/: 2_Programming_Model(2).md
DeepLearning/CheckFeaturemap/: resnet18_feat.py
Excel_logger/: HowToUseExcelLogger.md
MNIST_on_GPU/: README.md  v1.py  v2.py  v3.c  v4.cu  v5.cu
resnet18-kernel-lab/: .gitignore
resnet18-kernel-lab/cpp/: CMakeLists.txt
resnet18-kernel-lab/cpp/fp32/: CMakeLists.txt
resnet18-kernel-lab/cpp/fp32/kernels/: add_tensor.cu  basic_block.cu  maxpool2d.cu  relu.cu
resnet18-kernel-lab/cpp/fp32/runtime/: infer_conv1_bn1_relu.cu  infer_stem_block0.cu
resnet18-kernel-lab/scripts/: build_fp32.sh  run_step2.sh  run_step3.sh
resnet18-kernel-lab/tools/: export_resnet18.py  make_check_im2col.py  make_step2_fixture.py  make_step3_fixture.py  make_step3_stem_only.py
